--- a/VWEB/Views/Postagens/Index.cshtml
+++ b/VWEB/Views/Postagens/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.Descricao)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Imagem)
+            @Html.DisplayNameFor(model => model.ImagemCapa)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Data)
@@ -35,7 +35,7 @@
             @Html.DisplayFor(modelItem => item.Descricao)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Imagem)
+            @Html.DisplayFor(modelItem => item.ImagemCapa)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Data)
