--- a/VWEB/Views/Postagens/Create.cshtml
+++ b/VWEB/Views/Postagens/Create.cshtml
@@ -31,11 +31,8 @@
                     @Html.LabelFor(model => model.ImagemCapa, new { @class = "custom-file-label" })
                 </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Criar" class="btn btn-success" />
-                    </div>
-                </div>
+                <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Publicar Mensagem</button>
+
             }
         </div>
     </div>
