--- a/VWEB/Views/Shared/_TemplatePrincipal.cshtml
+++ b/VWEB/Views/Shared/_TemplatePrincipal.cshtml
@@ -163,7 +163,7 @@
                     <i class="fa fa-envelope"></i>
                     <span class="badge badge-pill badge-success notification">7</span>
                 </a>
-                <a href="#">
+                <a href="./Loggout/Deslogar">
                     <i class="fa fa-power-off"></i>
                 </a>
             </div>
