--- a/VWEB/Views/Usuarios/Create.cshtml
+++ b/VWEB/Views/Usuarios/Create.cshtml
@@ -4,56 +4,40 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<div class="card" style="width:70%;">
+    <h5 class="card-header white-text text-center py-4" style="background-color: green;">
+        <strong>Criar Usuário</strong>
+    </h5>
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Usuario</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+    <div class="card-body px-lg-5 pt-0" id="">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "200", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Nome, htmlAttributes: new { data_error = "Inválido", data_success = "" })
             </div>
-        </div>
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "200", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { data_error = "Inválido", data_success = "" })
+            </div>
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "200", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { data_error = "Inválido", data_success = "" })
+            </div>
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "200", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Senha, htmlAttributes: new { data_error = "Inválido", data_success = "" })
+            </div>
+            if (ViewBag.JaExiste != null)
+            {
+                <span class="text-danger">@ViewBag.JaExiste</span>
+            }
+            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Criar Usuário</button>
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
+
