--- a/VWEB/Views/Usuarios/Edit.cshtml
+++ b/VWEB/Views/Usuarios/Edit.cshtml
@@ -4,58 +4,33 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<div class="card" style="width:70%;">
+<h5 class="card-header white-text text-center py-4" style="background-color: green;">
+    <strong>Editar Usuário</strong>
+</h5>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Usuario</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="card-body px-lg-5 pt-0" id="">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Email)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "200", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Nome, htmlAttributes: new { data_error = "Inválido", data_success = "" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger" })
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "200", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { data_error = "Inválido", data_success = "" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "200", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Senha, htmlAttributes: new { data_error = "Inválido", data_success = "" })
             </div>
+            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Editar Usuário</button>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
