--- a/VWEB/Views/Usuarios/Index.cshtml
+++ b/VWEB/Views/Usuarios/Index.cshtml
@@ -20,14 +20,11 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Senha)
-        </th>
-        <th></th>
+        <th>Ações</th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
+    <tr class="">
         <td>
             @Html.DisplayFor(modelItem => item.Nome)
         </td>
@@ -38,12 +35,13 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Senha)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <a href="/Usuarios/Edit/@item.Id" class="btn btn-dark-green lighten-2" >
+                <i class="fas fa-edit text-white" ></i>
+            </a>
+            <a href="/Usuarios/Delete/@item.Id" class="btn deep-orange lighten-2" >
+                <i class="fas fa-trash text-white">
+                </i>
+            </a>
         </td>
     </tr>
 }
