--- a/VWEB/Content/style.css
+++ b/VWEB/Content/style.css
@@ -448,10 +448,10 @@ body {
 
 .chiller-theme .sidebar-wrapper ul li:hover a i,
 .chiller-theme .sidebar-wrapper .sidebar-dropdown .sidebar-submenu li a:hover:before,
-.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu:focus+span,
+.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu:focus + span,
 .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active a i {
-    color: #16c7ff;
-    text-shadow:0px 0px 10px rgba(22, 199, 255, 0.5);
+    color: #04a704;
+    text-shadow: 0px 0px 10px #04a70480;
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-menu ul li a i,
