--- a/VWEB/Views/Postagens/Index.cshtml
+++ b/VWEB/Views/Postagens/Index.cshtml
@@ -4,48 +4,25 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Postagens</h2>
+<h2>Mensagens da Villa</h2>
+<hr />
+<div id="mensagensDaVilla" class="row" style="width:90%">
 
-<p>
-    @Html.ActionLink("Criar Nova", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Titulo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImagemCapa)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Data)
-        </th>
-        <th></th>
-    </tr>
+    @foreach (var item in Model)
+    {
+        <a class="card mr-4" style="width:300px" href="/">
+        <div class="view">
+            <img src="@item.ImagemCapa" width="220" height="150" />
+        </div>
+        <div class="card-body">
+            <h5 class="text-success">
+                @item.Titulo
+            <h5 />
+            <p class="card-text">
+                @item.Texto
+            </p>
+        </div>
+        </a>
+     }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Titulo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descricao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImagemCapa)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Data)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+</div>
