--- a/VWEB/Views/Shared/_TemplatePrincipal.cshtml
+++ b/VWEB/Views/Shared/_TemplatePrincipal.cshtml
@@ -13,8 +13,6 @@
 
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="~/Content/style.css" rel="stylesheet">
-
-
 </head>
 
 <body style="padding-top: 0px;">
@@ -31,15 +29,11 @@
                     </div>
                 </div>
                 <div class="sidebar-header">
-                    <div class="user-pic">
-
-                    </div>
                     <div class="user-info">
                         <span class="user-name">
-                            Nome
-                            <strong>Sobrenome</strong>
+                            @Session["nome"]
+                            <strong>@Session["sobrenome"]</strong>
                         </span>
-                        <span class="user-role">Cargo</span>
                         <span class="user-status">
                             <i class="fa fa-circle"></i>
                             <span>Online</span>
@@ -47,19 +41,6 @@
                     </div>
                 </div>
                 <!-- sidebar-header  -->
-                <div class="sidebar-search">
-                    <div>
-                        <div class="input-group">
-                            <input type="text" class="form-control search-menu" placeholder="Buscar Aluno...">
-                            <div class="input-group-append">
-                                <span class="input-group-text">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- sidebar-search  -->
                 <div class="sidebar-menu">
                     <ul>
                         <li class="header-menu">
@@ -84,7 +65,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="/Usuarios">Visulizar</a>
+                                        <a href="/Usuarios">Visualizar</a>
                                     </li>
                                 </ul>
                             </div>
