--- a/VWEB/Views/Alunos/Create.cshtml
+++ b/VWEB/Views/Alunos/Create.cshtml
@@ -4,77 +4,60 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<div class="card" style="width:70%;">
+    <h5 class="card-header white-text text-center py-4" style="background-color: green;">
+        <strong>Adicionar Aluno</strong>
+    </h5>
 
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Aluno</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+    <div class="card-body px-lg-5 pt-0" id="">
+        @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Matricula, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "10", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Matricula, htmlAttributes: new { data_error = "Inválido", data_success = "" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger" })
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" name="Img" id="Img" aria-describedby="ImgAddon" required="">
+                <label class="custom-file-label">Imagem</label>
             </div>
-        </div>
+ 
+            <div class="row" style="height:65px">
+                <div class="md-form md-outline col-6">
+                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "40" } } )
+                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class="pl-4", data_error = "Inválido", data_success = "" })
+                </div>
+                <div class="md-form md-outline col-6">
+                    @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "20" } } )
+                    @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new {@class="pl-4", data_error = "Inválido", data_success = "" })
+                </div>
+            </div>
+            <div class="md-form md-outline">
+                @Html.TextAreaFor(model => model.Observacao, new { @class = "md-textarea form-control validate", rows = "3", minlength = "10", maxlength = "200" })
+                @Html.LabelFor(model => model.Observacao, htmlAttributes: new { data_error = "Inválido", data_success = "" })
+            </div>
+            <div class="row mb-4 ">
+                <div class="col-6">
+                    @Html.LabelFor(model => model.ReponsavelId, "Responsavel", htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("ResponsavelId", null, htmlAttributes: new { @class = "browser-default custom-select", style = "border-radius:none;" })
+                    @Html.ValidationMessageFor(model => model.ReponsavelId, "", new { @class = "text-danger" })
+                </div>
+                <div class="col-6">
+                    @Html.LabelFor(model => model.TurmaId, "Turmas", htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("TurmaId", null, htmlAttributes: new { @class = "browser-default custom-select", style = "border-radius:none;" })
+                    @Html.ValidationMessageFor(model => model.TurmaId, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Matricula, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Matricula, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Matricula, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Observacao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Observacao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Observacao, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Img, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Img, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Img, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SenhaSei, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SenhaSei, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SenhaSei, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Adicionar Aluno</button>
+        }
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
