--- a/VWEB/Views/Alunos/Delete.cshtml
+++ b/VWEB/Views/Alunos/Delete.cshtml
@@ -8,8 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Aluno</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Nome)
@@ -43,30 +42,12 @@
             @Html.DisplayFor(model => model.Observacao)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Img)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Img)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SenhaSei)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SenhaSei)
-        </dd>
-
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+     {
         @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a class="btn btn-warning" href="/Usuarios">Voltar</a>
+     }
 </div>
