--- a/VWEB/Views/Alunos/Index.cshtml
+++ b/VWEB/Views/Alunos/Index.cshtml
@@ -4,13 +4,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>Alunos</h2>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Img)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
         </th>
@@ -18,46 +17,54 @@
             @Html.DisplayNameFor(model => model.Sobrenome)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Turma)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Reponsavel)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Matricula)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Observacao)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Img)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SenhaSei)
-        </th>
-        <th></th>
+        <th>Ações</th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Sobrenome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Matricula)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Observacao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Img)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SenhaSei)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<tr>
+    <td>
+        <img class="round" src="@item.Img" width="60">
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Nome)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Sobrenome)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Turma.Nome)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Reponsavel.Nome)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Matricula)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Observacao)
+    </td>
+
+    <td>
+        <a href="/Alunos/Edit/@item.Id" class="btn btn-dark-green lighten-2">
+            <i class="fas fa-edit text-white"></i>
+        </a>
+        <a href="/Alunos/Delete/@item.Id" class="btn deep-orange lighten-2">
+            <i class="fas fa-trash text-white">
+            </i>
+        </a>
+    </td>
+</tr>
 }
 
 </table>
