--- a/VWEB/Views/Shared/_TemplatePrincipal.cshtml
+++ b/VWEB/Views/Shared/_TemplatePrincipal.cshtml
@@ -54,7 +54,7 @@
                         </li>
                         <li class="sidebar-dropdown">
                             <a href="#">
-                                <i class="fas fa-users"></i>
+                                <i class="fas fa-user"></i>
                                 <span>Usuarios</span>
                             </a>
                             <div class="sidebar-submenu">
@@ -66,6 +66,24 @@
                                     </li>
                                     <li>
                                         <a href="/Usuarios">Visualizar</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="sidebar-dropdown">
+                            <a href="#">
+                                <i class="fas fa-users"></i>
+                                <span>Turmas</span>
+                            </a>
+                            <div class="sidebar-submenu">
+                                <ul>
+                                    <li>
+                                        <a href="/Turmas/Create">
+                                            Adicionar Turma
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/Turmas">Visualizar</a>
                                     </li>
                                 </ul>
                             </div>
@@ -112,7 +130,7 @@
                         </li>
                         <li class="sidebar-dropdown">
                             <a href="#">
-                                <i class="fas fa-users"></i>
+                                <i class="fas fa-graduation-cap"></i>
                                 <span>Alunos</span>
                             </a>
                             <div class="sidebar-submenu">
@@ -128,7 +146,7 @@
                         </li>
                         <li class="sidebar-dropdown">
                             <a href="#">
-                                <i class="fas fa-user"></i>
+                                <i class="far fa-user"></i>
                                 <span>Responsáveis</span>
                             </a>
                             <div class="sidebar-submenu">
@@ -151,9 +169,8 @@
                 <a href="/">
                     <i class="fa fa-home"></i>
                 </a>
-                <a href="#">
-                    <i class="fa fa-envelope"></i>
-                    <span class="badge badge-pill badge-success notification">7</span>
+                <a href="~/Usuarios/Details/@Session["idUser"]">
+                    <i class="fas fa-user"></i>
                 </a>
                 <a href="~/Loggout/Deslogar">
                     <i class="fa fa-power-off"></i>
