--- a/VWEB/Views/Turmas/Create.cshtml
+++ b/VWEB/Views/Turmas/Create.cshtml
@@ -4,43 +4,36 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Turma</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+<div class="card" style="width:70%;">
+    <h5 class="card-header white-text text-center py-4" style="background-color: green;">
+        <strong>Criar Turma</strong>
+    </h5>
+    <div class="card-body px-lg-5 pt-0" id="">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group mt-4">
+                @Html.LabelFor(model => model.Seriado, htmlAttributes: new { @class = "control-label" })
+                @Html.EnumDropDownListFor(model => model.Seriado, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Seriado, "", new { @class = "text-danger" })
+            </div>
+            <div class="md-form md-outline">
                 @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaxAlunos, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="md-form md-outline">
                 @Html.EditorFor(model => model.MaxAlunos, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaxAlunos, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.MaxAlunos, htmlAttributes: new { @class = "control-label" })
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Criar</button>
+
+        }
+
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
