--- a/VWEB/Views/Turmas/Edit.cshtml
+++ b/VWEB/Views/Turmas/Edit.cshtml
@@ -4,47 +4,44 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<div class="card" style="width:70%;">
+    <h5 class="card-header white-text text-center py-4" style="background-color: green;">
+        <strong>Editar Turma</strong>
+    </h5>
+
+    <div class="card-body px-lg-5 pt-0" id="">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Turma</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+            <div class="md-form md-outline">
+                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control validate " } })
+                @Html.LabelFor(model => model.Nome)
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaxAlunos, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MaxAlunos, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaxAlunos, "", new { @class = "text-danger" })
+            <div class="md-form md-outline ">
+                @Html.EditorFor(model => model.MaxAlunos, new { htmlAttributes = new { @class = "form-control validate " } })
+                @Html.LabelFor(model => model.MaxAlunos)
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group mb-4">
+                @Html.LabelFor(model => model.Seriado, htmlAttributes: new { @class = "control-label" })
+                @Html.EnumDropDownListFor(model => model.Seriado, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Seriado, "", new { @class = "text-danger" })
             </div>
-        </div>
+
+            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">
+                Editar Turma
+            </button>
+
+        }
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
