--- a/VWEB/Views/Turmas/Index.cshtml
+++ b/VWEB/Views/Turmas/Index.cshtml
@@ -4,34 +4,42 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Tumas</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+<table class="table mt-4">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Seriado)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.MaxAlunos)
         </th>
-        <th></th>
+        <th>Ações</th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Seriado)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Nome)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.MaxAlunos)
         </td>
+        
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <a href="/Turmas/Edit/@item.Id" class="btn btn-dark-green lighten-2">
+                <i class="fas fa-edit text-white"></i>
+            </a>
+            <a href="/Turmas/Delete/@item.Id" class="btn deep-orange lighten-2">
+                <i class="fas fa-trash text-white">
+                </i>
+            </a>
         </td>
     </tr>
 }
