--- a/VWEB/Views/Usuarios/Details.cshtml
+++ b/VWEB/Views/Usuarios/Details.cshtml
@@ -4,47 +4,43 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+    <div class="card" style="width:70%;">
+        <h5 class="card-header white-text text-center py-4" style="background-color: green;">
+            <strong>Editar Usuário</strong>
+        </h5>
+        <div class="card-body px-lg-5 pt-0 mt-4" id="">           
+            <div class="form-group">
+                @Html.LabelFor(model => model.Nome)
+                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Sobrenome)
+                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email)
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Senha)
+                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+            </div>
 
-<div>
-    <h4>Usuario</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+            <div class="row m-0">
+                <div class=" col-6 text-center">
+                    <a href="../Edit/@Model.Id" class="btn btn-success btn-rounded btn-block z-depth-0 my-4 waves-effect" >
+                        Editar Usuario
+                    </a>
+                </div>
+                <div class="col-6 text-center">
+                    <a href="../Delete/@Model.Id" class="btn btn-danger btn-rounded btn-block z-depth-0 my-4 waves-effect">
+                        Excluir Usuário
+                    </a>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Sobrenome)
-        </dt>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Sobrenome)
-        </dd>
+            
+        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Senha)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Senha)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
