--- a/VWEB/Views/Alunos/Edit.cshtml
+++ b/VWEB/Views/Alunos/Edit.cshtml
@@ -1,39 +1,21 @@
 ﻿@model VWEB.Models.Aluno
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
 }
-
 
 <div class="card" style="width:70%;">
     <h5 class="card-header white-text text-center py-4" style="background-color: green;">
-        <strong>Editar Usuário</strong>
+        <strong>Editar Aluno</strong>
     </h5>
 
     <div class="card-body px-lg-5 pt-0" id="">
         @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
-
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-
             <div class="md-form md-outline">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control validate " } })
-                @Html.LabelFor(model => model.Nome)
-            </div>
-
-            <div class="md-form md-outline">
-                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.Sobrenome)
-            </div>
-            <div class="md-form md-outline">
-                @Html.EditorFor(model => model.Matricula, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.Matricula)
-            </div>
-            <div class="md-form md-outline">
-                @Html.EditorFor(model => model.Observacao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.Observacao)
+                @Html.EditorFor(model => model.Matricula, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "10", minlength = "5", style = "max-width='100% !important'" } })
+                @Html.LabelFor(model => model.Matricula, htmlAttributes: new { data_error = "Inválido", data_success = "" })
             </div>
 
             <div class="custom-file">
@@ -41,12 +23,41 @@
                 <label class="custom-file-label">Imagem</label>
             </div>
 
-            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Editar Aluno</button>
+            <div class="row" style="height:65px">
+                <div class="md-form md-outline col-6">
+                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "40" } })
+                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "pl-4", data_error = "Inválido", data_success = "" })
+                </div>
+                <div class="md-form md-outline col-6">
+                    @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "20" } })
+                    @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { @class = "pl-4", data_error = "Inválido", data_success = "" })
+                </div>
+            </div>
+            <div class="md-form md-outline">
+                @Html.TextAreaFor(model => model.Observacao, new { @class = "md-textarea form-control validate", rows = "3", minlength = "10", maxlength = "200" })
+                @Html.LabelFor(model => model.Observacao, htmlAttributes: new { data_error = "Inválido", data_success = "" })
+            </div>
+            <div class="row mb-4 ">
+                <div class="col-6">
+                    @Html.LabelFor(model => model.ReponsavelId, "Responsavel", htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("ResponsavelId", null, htmlAttributes: new { @class = "browser-default custom-select", style = "border-radius:none;" })
+                    @Html.ValidationMessageFor(model => model.ReponsavelId, "", new { @class = "text-danger" })
+                </div>
+                <div class="col-6">
+                    @Html.LabelFor(model => model.TurmaId, "Turmas", htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("TurmaId", null, htmlAttributes: new { @class = "browser-default custom-select", style = "border-radius:none;" })
+                    @Html.ValidationMessageFor(model => model.TurmaId, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
+
+
+
+
+            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Editar Aluno</button>
         }
     </div>
 </div>
-
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
