--- a/VWEB/Views/Responsaveis/Delete.cshtml
+++ b/VWEB/Views/Responsaveis/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Responsavel</h4>
+    <h4>Responsável</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -84,30 +81,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Observacao)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Observacao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UltimoAcesso)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UltimoAcesso)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PrimeiroAcesso)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PrimeiroAcesso)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.TipoResponsavel)
         </dt>
 
@@ -120,9 +93,7 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a class="btn btn-warning" href="/Responsaveis">Voltar</a>
     }
 </div>
