--- a/VWEB/Views/Responsaveis/Edit.cshtml
+++ b/VWEB/Views/Responsaveis/Edit.cshtml
@@ -1,113 +1,76 @@
 ﻿@model VWEB.Models.Responsavel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
 }
 
-<h2>Edit</h2>
 
+<div class="card" style="width:70%;">
+    <h5 class="card-header white-text text-center py-4" style="background-color: green;">
+        <strong>Editar Responsável</strong>
+    </h5>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Responsavel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+    <div class="card-body px-lg-5 pt-0" id="">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            <div class="cadResp row">
+                <div class="md-form md-outline col-md-6">
+                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "50", minlength = "5" } })
+                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
+
+                <div class="md-form md-outline col-md-6">
+                    @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "50", minlength = "5", style = "max-width='100% !important'" } })
+                    @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+            <div class="cadResp row">
+                <div class="md-form md-outline col-md-5">
+                    @Html.EditorFor(model => model.Endereco, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "50", minlength = "5" } })
+                    @Html.LabelFor(model => model.Endereco, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
+                <div class="md-form md-outline col-md-4">
+                    @Html.EditorFor(model => model.EndComplemento, new { htmlAttributes = new { @class = "form-control validate ", maxlenght = "100", style = "max-width='100% !important'" } })
+                    @Html.LabelFor(model => model.EndComplemento, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
+                <div class="md-form md-outline col-md-3">
+                    @Html.EditorFor(model => model.EndNumero, new { htmlAttributes = new { @class = "form-control validate ", style = "max-width='100% !important'" } })
+                    @Html.LabelFor(model => model.EndNumero, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+            <div class="cadResp row">
+                <div class="md-form md-outline col-md-6">
+                    @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control validate ", style = "max-width='100% !important'" } })
+                    @Html.LabelFor(model => model.Telefone, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
+                <div class="md-form md-outline col-md-6">
+                    @Html.EditorFor(model => model.Telefone2, new { htmlAttributes = new { @class = "form-control validate ", style = "max-width='100% !important'" } })
+                    @Html.LabelFor(model => model.Telefone2, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Sobrenome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger" })
+            <div id="reponsavel">
+                <span>Tipo de Reponsavel</span>
+                @Html.EnumDropDownListFor(model => model.TipoResponsavel, null, htmlAttributes: new { @class = "browser-default custom-select" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Endereco, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Endereco, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Endereco, "", new { @class = "text-danger" })
+            <div class="cadResp row">
+                <div class="md-form md-outline col-md-6">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control validate ", style = "max-width='100% !important'" } })
+                    @Html.LabelFor(model => model.Email, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
+                <div class="md-form md-outline col-md-6">
+                    @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control validate ", style = "max-width='100% !important'" } })
+                    @Html.LabelFor(model => model.Senha, htmlAttributes: new { data_error = "Inválido", data_success = "", style = "padding-left: 30px" })
+                </div>
             </div>
-        </div>
+            <button class="btn btn-outline-success btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Editar Responsavel</button>
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.EndNumero, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EndNumero, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EndNumero, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.EndComplemento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EndComplemento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EndComplemento, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Telefone, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Telefone2, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Telefone2, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Telefone2, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TipoResponsavel, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.TipoResponsavel, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TipoResponsavel, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
